--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
 	<title>Lazic website</title>
 	<link rel="stylesheet" type="text/css" href="/src/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="/src/css/fontawesome.min.css"> -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="/src/css/main.css">
 </head>
 <body>
@@ -21,9 +23,12 @@
 				<div class="collapse navbar-collapse" id="info-nav">
 					<ul class="navbar-nav">
 					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="#">
-					  	Text
-					  </a>
+						<div class="flex-row">
+							<span><i class="fas fa-phone"></i></span>
+							<span>
+							  Kontakt
+							</span>
+						</div>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link" href="#">Features</a>
@@ -49,18 +54,18 @@
 				<div class="collapse navbar-collapse justify-content-center text-white" id="navbar">
 					<ul class="navbar-nav w-50 justify-content-center">
 						<li class="nav-item">
-						  <a class="nav-link text-white text-uppercase active" aria-current="page" href="#">
-						  	Text
+						  <a class="nav-link text-white text-uppercase text-hover-white active" aria-current="page" href="#">
+							Text
 						  </a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link text-white text-uppercase w-10" href="#">Features</a>
+						  <a class="nav-link text-white text-uppercase w-10 text-hover-white" href="#">Features</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link text-white text-uppercase" href="#">Pricing</a>
+						  <a class="nav-link text-white text-uppercase text-hover-white" href="#">Pricing</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link text-white text-uppercase" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+						  <a class="nav-link text-white text-uppercase text-hover-white" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
 						</li>
 					</ul>
 				</div>
